# part_gen

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/part_gen/: __init__.py
src/part_gen/api/: schemas.py
src/part_gen/services/: gen_fastener.py
src/part_generator/: main.py
src/part_generator/api/: schemas.py
src/part_generator/services/: gen_fastener.py  result_bolt.step  result_washer.step
src/part_generator/templates/: gui_template.html
tests/manual/: test_with_requests.py
tests/unit/: api_test.py  gen_test.py  schema_test.py  test_api.py  test_bolt.step  test_gen.py  test_schema.py  test_washer.step
