[project]
name = "part-generator"
version = "0.1.0"
description = "Fastener generation package"
readme = "README.md"
authors = [
    { name = "galpeteer", email = "gal.peteer@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "cadquery>=2.7.0",
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
